--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,42 +7,7 @@ services:
     entrypoint: bash ./entrypoint.sh
     volumes:
       - ./entrypoint.sh:/var/lib/etcd-data/entrypoint.sh
-    environment:
-      - _ETCD_NAME=etcd-0
-      - _ETCD_CLUSTER=etcd-0=http://etcd-0:2380,etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380
-
-
-
-  etcd-1:
-    image: etcd-node:latest
-    build: .
-    entrypoint: bash ./entrypoint.sh
-    volumes:
-      - ./entrypoint.sh:/var/lib/etcd-data/entrypoint.sh
-    environment:
-      - _ETCD_NAME=etcd-1
-      - _ETCD_CLUSTER=etcd-0=http://etcd-0:2380,etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380
-
-
-  etcd-2:
-    image: etcd-node:latest
-    build: .
-    entrypoint: bash ./entrypoint.sh
-    volumes:
-      - ./entrypoint.sh:/var/lib/etcd-data/entrypoint.sh
-    environment:
-      - _ETCD_NAME=etcd-2
-      - _ETCD_CLUSTER=etcd-0=http://etcd-0:2380,etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380
-
-
-  etcd-3:
-    image: etcd-node:latest
-    build: .
-    entrypoint: bash ./entrypoint.sh
-    volumes:
-      - ./entrypoint.sh:/var/lib/etcd-data/entrypoint.sh
-    environment:
-      - _ETCD_NAME=etcd-3
-      - _ETCD_CLUSTER=etcd-0=http://etcd-0:2380,etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380
-
-
+    env_file:
+      - .env
+    deploy:
+      replicas: 3
