Add external docker network to connect to discovery service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,9 @@ services:
       - .env
     deploy:
       replicas: 3
+
+networks:
+  default:
+    external:
+      name: etcd-cluster-network
+
